--- a/css/style.css
+++ b/css/style.css
@@ -2,15 +2,41 @@ body{
   font-family: 'Montserrat', sans-serif;
 }
 
+p{
+  color: white;
+  font-size: 2.6rem;
+}
+
+h1{
+  color:white;
+  font-weight: 700;
+  font-size: 6.5rem;
+}
+
+h2{
+  font-size: 5rem;
+  font-weight: 700;
+}
+
 li{
   list-style: none;
 }
 
-h3{
-  color: #fff;
-  font-weight: 800;
-  font-size: 3rem;
+.bg_teal{
+  background-color: #1abc9c;
 }
+
+.mgn_bottom{
+  margin-bottom: 30px;
+}
+.mgn_top{
+  margin-top: 30px;
+}
+
+.pad{
+  padding: 80px 0;
+}
+
 
 /* HEADER */
 
@@ -20,7 +46,7 @@ h3{
   width: 100%;
   top: 0;
   left: 0;
-  /* z-index: 1; */
+  z-index: 1;
   height: 100px;
   line-height: 100px;
   background-color: #2c3e50;
@@ -28,10 +54,8 @@ h3{
 
 .logoo{
   color: #fff;
-  color: #fff;
-  font-weight: 800;
+  font-weight: 700;
   font-size: 2.7rem;
-  line-height: 100px;
   vertical-align: middle;
 }
 
@@ -41,7 +65,7 @@ nav{
 
 nav a{
   text-decoration: none;
-  font-weight: 800;
+  font-weight: 700;
   color: white;
   font-size: 2rem;
 
@@ -56,10 +80,72 @@ nav li{
   display: inline-block;
   text-transform: uppercase;
   margin-left: 30px;
-  line-height: 100px;
 }
 
 .hamburger{
   float: right;
-line-height: 100px;
 }
+
+
+.jumbo {
+  position: relative;
+  margin-top: 100px;
+  padding: 30px 0;
+  height: 650px;
+}
+
+.jumbo_text{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  width: 100%;
+}
+
+.avatar{
+  display: block;
+  margin:auto;
+  height: 250px;
+  margin-bottom: 40px;
+}
+
+.star{
+  color: white;
+  font-size: 4rem;
+  margin-left: 15px;
+  margin-right: 15px;
+}
+
+ hr{
+  display: inline-block;
+  border: 2px solid white;
+  width: 150px;
+}
+
+
+#portfolio{
+  margin: auto;
+  text-align: center;
+  color: #2c3e50;
+}
+
+.recolor_blue{
+  color: #2c3e50;
+
+}
+.hr_blue{
+  border: 2px solid #2c3e50;
+}
+
+
+.box_port{
+  width: 100%;
+  border-radius: 10px;
+  margin-top: 30px;
+  background-color: blue;
+}
+
+/* .box_port img{
+  width: 100%;
+} */
