--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,31 @@ li{
   list-style: none;
 }
 
+
+.btn_down{
+  color: white;
+  background-color: transparent;
+  border: 2px solid white;
+  padding: 20px 30px;;
+}
+
+.btn_down:hover{
+  border: none;
+}
+
+.wrapper_small{
+  max-width: 800px;
+  margin: auto;
+}
+
+.color_white{
+  color: white;
+}
+
+.text_left{
+  text-align: left;
+}
+
 .bg_teal{
   background-color: #1abc9c;
 }
@@ -143,9 +168,9 @@ nav li{
   width: 100%;
   border-radius: 10px;
   margin-top: 30px;
-  background-color: blue;
 }
 
-/* .box_port img{
-  width: 100%;
-} */
+#about{
+  text-align: center;
+  color: white;
+}
