--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@ h1{
 h2{
   font-size: 5rem;
   font-weight: 700;
+  text-align: center;
 }
 
 li{
@@ -23,11 +24,24 @@ li{
 }
 
 
+.btn_send{
+  color: white;
+  background-color: #1abc9c;
+  padding: 20px 30px;
+}
+
+.btn_send:hover{
+  color: white;
+  background-color: #119a7e;
+  border-color: #119a68;
+
+}
+
 .btn_down{
   color: white;
   background-color: transparent;
   border: 2px solid white;
-  padding: 20px 30px;;
+  padding: 20px 30px;
 }
 
 .btn_down:hover{
@@ -173,4 +187,28 @@ nav li{
 #about{
   text-align: center;
   color: white;
+}
+
+#about p{
+  font-size: 2rem;
+}
+
+#form{
+  text-align: center;
+  background-color: white;
+  color: #2c3e50;
+}
+
+
+.form_text{
+  border: none;
+  font-size: 2rem;
+  height: 70px;
+  color:#495057;
+  padding: 20px 10px 30px;
+  margin-bottom: 15px;
+  box-shadow: none;
+  border-bottom: 1px solid #9e9e9e;
+  border-radius: 0px;
+
 }
