--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ body{
 
 p{
   color: white;
-  font-size: 2.6rem;
+  font-size: 2rem;
 }
 
 h1{
@@ -17,6 +17,11 @@ h2{
   font-size: 5rem;
   font-weight: 700;
   text-align: center;
+}
+
+h3{
+  font-size: 2,4rem;
+  font-weight: 700;
 }
 
 li{
@@ -57,9 +62,6 @@ li{
   color: white;
 }
 
-.text_left{
-  text-align: left;
-}
 
 .bg_teal{
   background-color: #1abc9c;
@@ -211,4 +213,19 @@ nav li{
   border-bottom: 1px solid #9e9e9e;
   border-radius: 0px;
 
+}
+
+#footer_contact{
+  background-color: #2c3e50;
+  color: #fff;
+  height: 300px;
+  text-align: center;
+}
+
+
+.contact_icon{
+  border-radius: 100px;
+  border: 2px solid white;
+
+  font-size: 20px;
 }
