--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,8 @@ li{
 }
 
 .btn_down:hover{
-  border: none;
+  border: 2px solid white;
+  background-color: white;
 }
 
 .wrapper_small{
@@ -72,6 +73,10 @@ li{
 }
 .mgn_top{
   margin-top: 30px;
+}
+
+.mgn_top_20{
+  margin-top: 20px;
 }
 
 .pad{
@@ -154,16 +159,38 @@ nav li{
 .star{
   color: white;
   font-size: 4rem;
-  margin-left: 15px;
-  margin-right: 15px;
 }
 
- hr{
-  display: inline-block;
-  border: 2px solid white;
-  width: 150px;
+.star::before, .star::after{
+  content:"";
+  display:inline-block;
+  vertical-align: middle;
+  background-color: white;
+  width: 100px;
+  height: 3px;
+  border-radius: 10px;
 }
 
+.star_dark{
+  color: #2c3e50;
+  font-size: 4rem;
+}
+
+.star_dark::before, .star_dark::after{
+  content:"";
+  display:inline-block;
+  vertical-align: middle;
+  background-color: #2c3e50;
+  width: 100px;
+  height: 3px;
+  border-radius: 10px;
+}
+
+.star, .star_dark i{
+  margin: 0 15px;
+}
+
+/* PORTFOLIO */
 
 #portfolio{
   margin: auto;
@@ -175,16 +202,33 @@ nav li{
   color: #2c3e50;
 
 }
-.hr_blue{
-  border: 2px solid #2c3e50;
-}
-
 
 .box_port{
+  position: relative;
   width: 100%;
   border-radius: 10px;
   margin-top: 30px;
+  overflow: hidden;
 }
+
+
+.overlay{
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(26, 188, 156, 0.9);
+}
+
+
+.box_port:hover .overlay{
+  display: block;
+}
+
+
+/* ABOUT */
 
 #about{
   text-align: center;
@@ -218,14 +262,51 @@ nav li{
 #footer_contact{
   background-color: #2c3e50;
   color: #fff;
-  height: 300px;
   text-align: center;
 }
 
 
-.contact_icon{
-  border-radius: 100px;
-  border: 2px solid white;
-
+#footer_contact i{
   font-size: 20px;
+
+}
+
+.social{
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+  border-radius: 100%;
+  border: 2px solid white;
+  line-height: 50px;
+  margin-right: 15px;
+}
+
+.pad_ul{
+  padding-inline-start: 0px;
+}
+
+ul li.social:last-child{
+ margin-right: 0px;
+}
+
+#firma{
+  background-color: #1a252f;
+  color: white;
+  font-size: 1.5rem;
+  height: 65px;
+  text-align: center;
+  line-height: 65px;
+}
+
+
+
+/* RESPONSIVE */
+
+
+ /* XS */
+
+@media screen and (max-width: ){
+  .mg_top_xs{
+    margin-top: 80px;
+  }
 }
